Fix EmployeeService methods and Controller issues, update EmployeeMapper for proper mappings